src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-jolokia
spec:
  selector: {}
  ports:
  -
    name: "ml2-jolokia"
    port: 8778
    protocol: TCP
    targetPort: 8778
