src/main/fabric8/route-jolokia.yml
apiVersion: v1
kind: Route
metadata:
  name: jolokia-${project.artifactId}
spec:
  port:
    targetPort: 8778
  to:
    kind: Service
    name: jolokia-${project.artifactId}
