src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ${project.artifactId}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
kind: Route
metadata:
  name: jolokia-${project.artifactId}
spec:
  port:
    targetPort: 8778
  to:
    kind: Service
    name: jolokia-${project.artifactId}
